--- a/src/main/resources/static/client/css/style.css
+++ b/src/main/resources/static/client/css/style.css
@@ -3511,3 +3511,15 @@ ol {
 		font-size: 24px;
 	}
 }
+
+.accountlink{
+	color:black;
+}
+
+.accountlink:focus{
+	color:blue;
+}
+
+.accountlink:hover{
+	color:blue;
+}
